--- a/pipeline/pipeline-maida-based.yaml
+++ b/pipeline/pipeline-maida-based.yaml
@@ -8,17 +8,22 @@ spec:
   - name: main-workspace
   - name: maven-settings
   - name: maven-local-repo
+  - name: gitops-workspace
+  - name: git-auth
 
   params:
     - name: APP_SOURCE_GIT
       description: The application git repository
-      default: 'https://github.com/redhat-oraex/tekton-pipeline-demo-app'
+      default: 'http://gitea-david-tekton-pipeline.apps.middleware.rhbr-lab.com/gitea-admin/tekton-pipeline-demo-app'
     - name: APP_SOURCE_BRANCH
       type: string
-      default: ''
+      default: 'develop'
+
+    - name: APP_MANIFESTS_GIT
+      type: string
+
     - name: APP_CONTEXT_DIR
       default: './app-source-code/helloworld'
-
   tasks:
     - name: source-clone
       taskRef:
@@ -40,6 +45,16 @@ spec:
       workspaces:
         - name: output
           workspace: main-workspace
+
+    - name: get-commit-info
+      taskRef:
+        kind: Task
+        name: get-git-commit-info
+      workspaces:
+        - name: output
+          workspace: main-workspace
+      runAfter:
+        - source-clone
 
     - name: unit-test
       taskRef:
@@ -64,7 +79,7 @@ spec:
         - name: maven-local-repo
           workspace: maven-local-repo
       runAfter:
-        - source-clone
+        - get-commit-info
 
     - name: code-analysis
       params:
@@ -78,8 +93,53 @@ spec:
             - '-Denforcer.skip=true'
         - name: CONTEXT_DIR
           value: $(params.APP_CONTEXT_DIR)
+      taskRef:
+        kind: Task
+        name: maven
+      workspaces:
+        - name: source
+          workspace: main-workspace
+        - name: maven-settings
+          workspace: maven-settings
+        - name: maven-local-repo
+          workspace: maven-local-repo
       runAfter:
         - unit-test
+
+    - name: build-app
+      params:
+        - name: GOALS
+          value:
+            - clean
+            - package
+            - '-DskipTests=true'
+            - '-Denforcer.skip=true'
+        - name: CONTEXT_DIR
+          value: $(params.APP_CONTEXT_DIR)
+      taskRef:
+        kind: Task
+        name: maven
+      workspaces:
+        - name: source
+          workspace: main-workspace
+        - name: maven-settings
+          workspace: maven-settings
+        - name: maven-local-repo
+          workspace: maven-local-repo
+      runAfter:
+        - code-analysis
+
+    - name: archive-app
+      params:
+        - name: GOALS
+          value:
+            - deploy
+            - '-DskipTests=true'
+            - '-Denforcer.skip=true'
+        - name: CONTEXT_DIR
+          value: $(params.APP_CONTEXT_DIR)
+      runAfter:
+        - build-app
       taskRef:
         kind: Task
         name: maven
@@ -91,12 +151,36 @@ spec:
         - name: maven-local-repo
           workspace: maven-local-repo
 
+    - name: build-image
+      params:
+        - name: TLSVERIFY
+          value: 'false'
+        - name: IMAGE
+          value: >-
+            quay.io/dferreira/helloworld:$(tasks.get-commit-info.results.commit_hash)
+        - name: CONTEXT
+          value: './app-source-code/helloworld'
+      runAfter:
+        - archive-app
+      taskRef:
+        kind: ClusterTask
+        name: buildah
+      workspaces:
+        - name: source
+          workspace: main-workspace
+
+
+
     - name: sleep-cinco-mil
       taskRef:
         name: sleep-cinco-mil
         kind: Task
       workspaces:
-      - name: main-workspace
-        workspace: main-workspace
+        - name: source
+          workspace: main-workspace
+        - name: maven-settings
+          workspace: maven-settings
+        - name: maven-local-repo
+          workspace: maven-local-repo
       runAfter:
-      - code-analysis
+      - app-name
