git-update-deployment task completed

--- a/permissioning/serviceaccount.yaml
+++ b/permissioning/serviceaccount.yaml
@@ -3,4 +3,5 @@ kind: ServiceAccount
 metadata:
   name: pipeline
 secrets:
-- name: registries-pull-secret-tekton
+  - name: registries-pull-secret-tekton
+  - name: git-token
