--- a/pipeline/pipeline-maida-based.yaml
+++ b/pipeline/pipeline-maida-based.yaml
@@ -9,7 +9,6 @@ spec:
   - name: maven-settings
   - name: maven-local-repo
   - name: gitops-workspace
-  - name: git-auth
 
   params:
     - name: APP_SOURCE_GIT
@@ -21,6 +20,7 @@ spec:
 
     - name: APP_MANIFESTS_GIT
       type: string
+      default: 'http://gitea-david-tekton-pipeline.apps.middleware.rhbr-lab.com/gitea-admin/tekton-demo-app-manifests'
 
     - name: APP_CONTEXT_DIR
       default: './app-source-code/helloworld'
@@ -169,7 +169,20 @@ spec:
         - name: source
           workspace: main-workspace
 
-
+    - name: update-deployment
+      params:               
+        - name: GIT_REPOSITORY
+          value: $(params.APP_MANIFESTS_GIT)
+        - name: HASH_COMMIT
+          value: $(tasks.get-commit-info.results.commit_hash)
+      runAfter:
+        - build-image
+      taskRef:
+        kind: Task
+        name: git-update-deployment
+      workspaces:
+        - name: workspace
+          workspace: gitops-workspace
 
     - name: sleep-cinco-mil
       taskRef:
